RESOLVED FIXED162583
Exception unwinding code should use a CatchScope instead of a ThrowScope.
https://bugs.webkit.org/show_bug.cgi?id=162583
Summary Exception unwinding code should use a CatchScope instead of a ThrowScope.
Mark Lam
Reported 2016-09-26 16:05:13 PDT
This is because the exception unwinding code does not throw an exception. It only inspects the exception and passes it to the appropriate handler.
Attachments
proposed patch. (2.03 KB, patch)
2016-09-26 16:10 PDT, Mark Lam
ggaren: review+
Mark Lam
Comment 1 2016-09-26 16:10:04 PDT
Created attachment 289885 [details] proposed patch.
Geoffrey Garen
Comment 2 2016-09-26 16:11:57 PDT
Comment on attachment 289885 [details] proposed patch. r=me
Mark Lam
Comment 3 2016-09-26 16:14:57 PDT
Thanks for the review. Landed in r206401: <http://trac.webkit.org/r206401>.
Note You need to log in before you can comment on or make changes to this bug.