Exception unwinding code should use a CatchScope instead of a ThrowScope. https://bugs.webkit.org/show_bug.cgi?id=162583

Reviewed by Geoffrey Garen.

This is because the exception unwinding code does not throw an exception.
It only inspects the thrown exception and passes it to the appropriate handler.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::unwind):
* jit/JITExceptions.cpp:
(JSC::genericUnwind):



Canonical link: https://commits.webkit.org/180522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206401 268f45cc-cd09-0410-ab3c-d52691b4dbfc